--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 .jumbotron {
-
+  background-image: ''
 }
 
 .navbar {
@@ -12,3 +12,7 @@
 }
 
 
+h1 a {
+  text-decoration: none !important;
+  color: #333;
+}
