--- a/css/base.css
+++ b/css/base.css
@@ -19,6 +19,9 @@
   color: #fff !important;
 }
 
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover {
+  background-color: #738C62;
+}
 
 h1 a {
   text-decoration: none !important;
