--- a/css/typography.css
+++ b/css/typography.css
@@ -1,3 +1,11 @@
+/*Base Font */
+
+p, a, li, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif, 'Open Sans', sans-serif, 'Metrophobic', sans-serif;
+}
+
+/* Base colors */
+
 h1, h2, h3, h4, h5, h6 {
   color: #7899AB !important;
 }
@@ -7,6 +15,17 @@ h2> a {
 }
 
 
-p, a, li, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Roboto', sans-serif, 'Open Sans', sans-serif, 'Metrophobic', sans-serif;
+/* Over riding bootstrap */
+.navbar-nav li a{
+  color: #fff !important;
+}
+
+h1 a {
+  text-decoration: none !important;
+  color: #fff;
+}
+
+h1 a:hover, a:focus {
+  color: #fff;
+  text-decoration: none;
 }
