--- a/css/typography.css
+++ b/css/typography.css
@@ -6,7 +6,7 @@ p, a, li, h1, h2, h3, h4, h5, h6 {
 
 /* Base colors */
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   color: #7899AB !important;
 }
 
