--- a/css/base.css
+++ b/css/base.css
@@ -9,16 +9,11 @@
 	color: #fff;
 }
 
-.navbar {
-  background: transparent;
-  border: none;
-  margin-top: -90px;
-}
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover {
-  background-color: #738C62;
-  border-radius: 20px;
-}
+
+/*          */
+/* CAROUSEL */
+/*          */
 
 .carousel-caption a, .carousel-caption a:hover{
   color: #fff;
