--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,11 @@
+/*            */
+/*   Helpers  */
+/*            */
+
+.align-center {
+  text-align: center;
+}
+
 .jumbotron {
 	padding-top: 36;
 	padding-bottom: 70px;
