--- a/source/stylesheets/media-queries.css
+++ b/source/stylesheets/media-queries.css
@@ -7,11 +7,20 @@
     background: transparent;
     border: none;
     margin-top: -90px;
+    min-height: 100px;
+  }
+
+  .jumbotron .container h1 {
+    margin-bottom: 50px;
   }
 
   .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover {
     background-color: #738C62;
     border-radius: 20px;
+  }
+
+  .navbar-nav li {
+    padding-right: 20px;
   }
 
   .navbar-default .navbar-nav>li>a {
@@ -20,15 +29,11 @@
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     border-radius: 20px;
-}
+  }
 
   .navbar-default .navbar-nav>li>a:hover {
    background-color: #738C62;
    border-radius: 20px;
-  }
-
-  .navbar-nav>li {
-    padding-right: 20px;
   }
 }
 
