--- a/source/stylesheets/media-queries.css
+++ b/source/stylesheets/media-queries.css
@@ -7,7 +7,7 @@
     background: transparent;
     border: none;
     margin-top: -90px;
-    min-height: 100px;
+    min-height: 90px;
   }
 
   .jumbotron .container h1 {
@@ -21,6 +21,10 @@
 
   .navbar-nav li {
     padding-right: 20px;
+  }
+
+  .navbar-nav li a {
+    display: inline-block;
   }
 
   .navbar-default .navbar-nav>li>a {
