refactored css, removed slider js

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -4,14 +4,13 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %title Pioneer Valley Citizen Science Collaboratory
-    %meta{:content => "", :name => "description"}/
+    %meta{:content => "Pioneer Valley Citizen Science Collaboratory", :name => "description"}/
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
     
     / Stylesheets
-    %link{:href => "stylesheets/normalize.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "http://fonts.googleapis.com/css?family=Roboto|Open+Sans|Metrophobic", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "stylesheets/base.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:link => "stylesheets/normalize.css", :rel => "stylesheet", :type => 'text/css'}
     %link{:href => "https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "stylesheets/base.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "stylesheets/typography.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "stylesheets/media-queries.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "stylesheets/hampshire.css", :rel => "stylesheet", :type => "text/css"}/
