--- a/source/stylesheets/nav.css.scss
+++ b/source/stylesheets/nav.css.scss
@@ -1,8 +1,5 @@
-/*                */
-/* Screen > 767px */
-/*                */
-
 @media (min-width: 768px) {
+  
   .navbar {
     background: transparent;
     border: none;
@@ -10,13 +7,18 @@
     min-height: 90px;
   }
 
+  ul.nav.navbar-nav {
+		margin-left: -40px;
+	}
+
   .jumbotron .container h1 {
     margin-bottom: 50px;
   }
 
   .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover {
     background-color: #738C62;
-    border-radius: 20px;
+    opacity: 0.75;
+    border-radius: 35px;
   }
 
   .navbar-nav li {
@@ -32,18 +34,15 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    border-radius: 20px;
+    border-radius: 35px;
   }
 
   .navbar-default .navbar-nav>li>a:hover {
    background-color: #738C62;
-   border-radius: 20px;
+   opacity: 0.75;
+   border-radius: 35px;
   }
 }
-
-/*                 */
-/*  Screen < 767px */
-/*                 */
 
 @media (max-width: 767px)  {
   .navbar-nav li a{
