--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -1,4 +1,6 @@
 .row-fluid
+  .page-header
+    %h2 Projects
   .col-sm-4
     %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "images/salamander_watch_photo_icon_notext.png"}/
     %h2 Salamader Watch
