--- a/source/layouts/shared/footer.html.haml
+++ b/source/layouts/shared/footer.html.haml
@@ -1,4 +1,3 @@
-%footer.navbar.navbar-fixed-bottom{role: "navigation"}
+%footer
 	.container
-		%a.navbar-text.pull-left{:href => "/"} Pioneer Vallery Citizen Science Collabratory
-		%p.navbar-text.pull-right 2014
+		%p.navbar-text Pioneer Valley Citizen Science Collaboratory 
