--- a/source/stylesheets/base.css.scss
+++ b/source/stylesheets/base.css.scss
@@ -1,3 +1,14 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	.wrap {
+		min-height: 100%;
+		position: relative;
+		margin-bottom: 100px;
+	}
+}
+
 .top-buffer {
   padding-top: 20px;
 }
