--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -1,9 +1,11 @@
-footer.navbar {
-	background-color: #1D2532;
-	p.navbar-text, a.navbar-text {
-		color: white;
-	}
-	p.navbar-text, a.navbar-text:hover {
-		text-decoration: none;
-	}
+	footer {
+		width: 100%;
+		height: 80px;
+		position: relative;
+		bottom: 0;
+		left: 0;
+		background: #36404C;
+		p {
+			color: white;
+		}
 }
