refactored footer styles

--- a/source/layouts/shared/footer.html.haml
+++ b/source/layouts/shared/footer.html.haml
@@ -1,3 +1,4 @@
 %footer
 	.container
-		%p.navbar-text Pioneer Valley Citizen Science Collaboratory 
+		%a.navbar-text{:href => "/"} Pioneer Valley Citizen Science Collaboratory
+		%span.navbar-text.pull-right 2014
