--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -1,11 +1,17 @@
 	footer {
+		border-top: 2px solid black;
 		width: 100%;
 		height: 80px;
 		position: relative;
 		bottom: 0;
 		left: 0;
-		background: #36404C;
-		p {
+		background: rgba(28, 36, 49, 0.92);
+		a, span {
 			color: white;
+			text-decoration: none;
+			&:hover {
+				text-decoration: none;
+				color: white;
+			}
 		}
 }
