Changes to footer

--- a/source/layouts/shared/footer.html.haml
+++ b/source/layouts/shared/footer.html.haml
@@ -1,4 +1,6 @@
 %footer
 	.container
-		%a.navbar-text{:href => "/"} Pioneer Valley Citizen Science Collaboratory
-		%span.navbar-text.pull-right 2014
+		.row-fluid
+			.col-md-12
+				%p.navbar-text
+					%a{href: "/"}> Pioneer Valley Citizen Science Collaboratory, © 2014
