restructured folder structure

--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -14,10 +14,10 @@
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
         %ul.nav.navbar-nav
           %li
-            %a{:href => "science-issues.html"} Science Issues
+            %a{:href => "/science-issues/"} Science Issues
           %li
-            %a{:href => "projects.html"} Projects
+            %a{:href => "/projects/"} Projects
           %li
-            %a{:href => "connected.html"} Get Connected
+            %a{:href => "/connected/"} Get Connected
           %li
-            %a{:href => "about.html"} About Us
+            %a{:href => "/about/"} About Us
