--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -2,19 +2,19 @@
   .page-header
     %h2 Projects
   .col-sm-4
-    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "images/salamander_watch_photo_icon_notext.png"}/
+    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/salamander_watch_photo_icon_notext.png"}/
     %h2 Salamader Watch
     %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
     %p
-      %a.btn.btn-primary{:href => "/salamander-watch.html", :role => "button"} Learn More
+      %a.btn.btn-primary{:href => "salamander-watch/", :role => "button"} Learn More
   .col-sm-4
-    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "images/bud_burst_photo_icon_notext.png"}/
+    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/bud_burst_photo_icon_notext.png"}/
     %h2 Bud Burst
     %p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
     %p
       %a.btn.btn-primary{:href => "#", :role => "button"} Learn More &raquo;
   .col-sm-4
-    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "images/nest_watch_photo_icon_notext.png"}/
+    %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/nest_watch_photo_icon_notext.png"}/
     %h2 Nest Watch
     %p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
     %p
