--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -1,7 +1,7 @@
 .jumbotron
   .container
     %h1
-      %a{:href => "index.html"} Pioneer Valley Citizen Science Collaboratory
+      %a{:href => "/"} Pioneer Valley Citizen Science Collaboratory
 .container
   %nav.navbar.navbar-default{:role => "navigation"}
     .container
@@ -14,10 +14,10 @@
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
         %ul.nav.navbar-nav
           %li
-            %a{:href => "/science-issues/"} Science Issues
+            %a{:href => "/science-issues"} Science Issues
           %li
-            %a{:href => "/projects/"} Projects
+            %a{:href => "/projects"} Projects
           %li
-            %a{:href => "/connected/"} Get Connected
+            %a{:href => "/connected"} Get Connected
           %li
-            %a{:href => "/about/"} About Us
+            %a{:href => "/about"} About Us
