--- a/source/projects/index.html.haml
+++ b/source/projects/index.html.haml
@@ -6,7 +6,7 @@
     %h2 Salamader Watch
     %p Salamander Watch is a collaboration between Hampshire College and The Hitchcock Center for the Environment in Amherst, MA. This project involves both the “Big Night” (counting of spotted salamanders during the early spring mating migration) and the Egg Mass Count (which happens 3-4 weeks after the Big Night, and is used to get a better estimate of the breeding success and overall health of the population).
     %p
-      %a.btn.btn-primary{:href => "salamander-watch/", :role => "button"} Learn More
+      %a.btn.btn-primary{:href => "projects/salamander-watch", :role => "button"} Learn More
   .col-sm-4
     %img.img-circle{:alt => "Generic placeholder image", "data-src" => "holder.js/140x140", :src => "/images/bud_burst_photo_icon_notext.png"}/
     %h2 Bud Burst
