--- a/source/stylesheets/typography.css.scss
+++ b/source/stylesheets/typography.css.scss
@@ -19,3 +19,9 @@ h1 a:hover, a:focus {
   color: #fff;
   text-decoration: none;
 }
+
+@media (min-width: 767px) {
+	h1 a {
+		font-size: 48px;
+	}
+}
