modals on index, modalerizing scss

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,3 +1,38 @@
 .row-fluid
 	.page-header
-		%h2 Index
+		%h3 Welcome to the Pioneer Valley Citizen Science Collaboratory
+.row-fluid
+	.col-md-12
+		%h4 Frequently Asked Questions
+		%ul.faq.list-unstyled
+			%a{"data-target" => "#what-is-pvcs", "data-toggle" => "modal", :href => "#"}
+				%li What is he Pioneer Valley Citizen Science Collaboratory?
+			%a{"data-target" => "#scienctists-work", "data-toggle" => "modal", :href => "#"}
+				%li Where do Scientists Work?
+			%a{"data-target" => "#science-community", "data-toggle" => "modal", :href => "#"}
+				%li How does science affect me and my community?
+			%a{"data-target" => "#involved-in-science", "data-toggle" => "modal", :href => "#"}
+				%li Who can be involved in scienctific research?
+			%a{"data-target" => "#what-is-citizen-science", "data-toggle" => "modal", :href => "#"}
+				%li What is citizen science?
+			%a{"data-target" => "#how-can-i-get-involved", "data-toggle" => "modal", :href => "#"}
+				%li How can I get involved?
+
+= partial "layouts/modals/modals-index-faq"
+
+.row-fluid
+	.page-header
+		%h3 Environmental Issues and Pioneer Valley
+.row-fluid
+	.col-md-4.col-md-offset-5
+		%h2 Sup
+.row-fluid
+	.col-md-3.col-md-offset-2
+		%h2 Sup
+	.col-md-3
+		%h2 Sup
+	.col-md-3
+		%h2 Sup
+.row-fluid
+	.col-md-4.col-md-offset-5
+		%h2 Sup
