--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -23,7 +23,7 @@
             %a{:href => "/about"} Sign Up/Log In
         %form.navbar-form
           .search.input-group.pull-right
-            %input{:type => 'text', :class => 'form-control', :placehoder => 'Search'}
+            %input{:type => 'text', :class => 'form-control', :placeholder => 'Search PVCS'}
             .input-group-btn
               %button.btn.btn-default
                 %span.glyphicon.glyphicon-search
