--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,3 +1,4 @@
+// Base Styles --------------------------------------------------------------
 @import "normalize";
 @import "base";
 @import "hampshire";
@@ -5,3 +6,7 @@
 @import "normalize";
 @import "typography";
 @import "footer";
+
+
+// Page Specific Styles -----------------------------------------------------
+@import "index";
