Almost finished the about page

--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -16,11 +16,11 @@
           %li
             %a{:href => "/"} Home
           %li
-            %a{:href => "/projects"} About PVCS
+            %a{:href => "/about"} About PVCS
           %li
-            %a{:href => "/connected"} Projects
+            %a{:href => "/projects"} Projects
           %li
-            %a{:href => "/about"} Sign Up/Log In
+            %a{:href => "#"} Sign Up/Log In
         %form.navbar-form
           .search.input-group.pull-right
             %input{:type => 'text', :class => 'form-control', :placeholder => 'Search PVCS'}
