about page tweaks to content

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -67,8 +67,8 @@
 					%img{:src => "images/people/thomas-berry-profile.jpg", :alt => "Profile shot of Thomas Berry", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Thomas Berry
-				%p I am a web developer currently working at Encore Lab at the University of Toronto. We work on a variety of projects for researchers using many different tools, libraries and frameworks (node, backbone, jquery, underscore, ruby-on-rails, css3/sass, etc). I primarily write code, but increasingly I am gaining experience with project management and product design.
-				%p I hold a bachelors of arts in History and Geography from Brock University and a Master of Information Science from the University of Toronto. in 2013 graduated from Bitmaker Labs web development bootcamp and HackerYou's response web development course in 2013
+				%p Thomas Berry is a web developer currently working at Encore Lab at the University of Toronto. He works on a variety of projects for researchers using many different tools, libraries and frameworks (node, backbone, jquery, underscore, ruby-on-rails, css3/sass, etc). I primarily write code, but increasingly he is gaining experience with project management and product design.
+				%p Thomas holds a bachelors of arts in History and Geography from Brock University and a Master of Information Science from the University of Toronto. in 2013 graduated from Bitmaker Labs web development bootcamp and HackerYou's response web development course in 2013
 		
 		.row
 			.col-md-12
