Content on about page

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -80,6 +80,18 @@
 			.col-md-10
 				%h4 Tam Vu
 				%p Dr. Tam Vu is an Assistant Professor of Computer Science at the University of Colorado, Denver where his teaching and research focus on the design and use of networked mobile technology.
+		.row
+			.col-md-12
+				%h3 Our Partners
+			.col-md-12
+				%ul.list-unstyled
+					%h4
+						%li
+							%a{:href => ""} Hitchcock Center for the Environment
+					%li
+						%h4
+							%a{:href => ""}Dr. Susannah Lerman,
+							%span UMass Amherst/Neighbourhood Nestwatch Project
 
 
 
