--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -1,3 +1,10 @@
+.arrow {
+	background-image:url('/images/arrow.png');
+	background-size: 50% 50%;
+	background-repeat: no-repeat;
+	top: 50px;
+}
+
 ul.faq {
 	a {
 		text-decoration: none;
