Changes in homapage, adding images

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -57,10 +57,10 @@
 		.row
 			.col-md-2
 				.thumbnail
-					%img{:src => "#", :alt => "Profile shot of Hedieh Najafi", :class => 'img-circle img-responsive'}
+					%img{:src => "/images/people/hedieh-profile.png", :alt => "Profile shot of Hedieh Najafi", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Hedieh Najafi
-				%p s a researcher at the Encore lab and contributes to conceptualizing an integrated research component of the PVCS Collaboratory.
+				%p Hedieh is a researcher at the Encore lab and contributes to conceptualizing an integrated research component of the PVCS Collaboratory.
 		.row
 			.col-md-2
 				.thumbnail
