--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -11,5 +11,8 @@
 // Page Specific Styles -----------------------------------------------------
 @import "index";
 
+// Modals Specific Styles ---------------------------------------------------
+@import "modals";
+
 // Helpers ------------------------------------------------------------------
 @import "helpers";
