--- a/source/layouts/modals/modals-salamander.html.haml
+++ b/source/layouts/modals/modals-salamander.html.haml
@@ -1,4 +1,4 @@
-#climateChange.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "climateChange", :role => "dialog", :tabindex => "-1"}
+#climate-change-icon.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "#climate-change-icon", :role => "dialog", :tabindex => "-1"}
   .modal-dialog
     .modal-content
       .modal-header
@@ -11,7 +11,7 @@
           %p Climate change is among the most serious threats that salamander populations face. Detrimental changes in climate such as increased temperatures, changing humidity levels, desertification, and droughts wreak havoc on salamanders. These animals are generally adapted to moist and cool climates and may require very specific conditions to thrive. Salamanders also live a ''double-life'' being associated with both aquatic and terrestrial habitats.
           %p Alterations to these optimal conditions result in salamander species dwindling. Changes in climate can also effect the forming and availability of critical habitat features such as change. They state that salamanders need cool moist places to survive. The world is getting hotter and drier; temperatures in Appalachia are predicted to rise by 3 to 11 degrees Fahrenheit over the next century. Salamanders have relatively long lifespans, but they do not mature or reproduce as quickly as some other aquatic animals. They may not be able to adapt to such radical change.
           %p Biologists from the University of California, Berkeley, have reported that salamander populations in parts of Central America have declined sharply in the past 40 years and global warming could be the cause.
-#habitat-loss.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "habitat-loss", :role => "dialog", :tabindex => "-1"}
+#habitat-loss-icon.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "habitat-loss", :role => "dialog", :tabindex => "-1"}
   .modal-dialog
     .modal-content
       .modal-header
@@ -24,7 +24,7 @@
           %p One of the biggest issues affecting salamanders is the loss of their natural habitat. Many areas that were once suitable for salamanders to live have now been destroyed for developmental construction and agriculture. Habitats of all kinds are being lost at an alarming rate. Wetlands are drained, forests are logged and cut down, and waterfronts are developed. Salamanders are literally losing their homes and they are losing them rapidly! Deforestation is particularly harmful to salamanders. When the amount of shade that covers the forest floor is reduced due to the removal of trees, the increased sunlight can allow for higher temperatures to reach the forest floor.
           %p This increases the threat of desiccation. The exposed sunlight can also rapidly dry up vernal pools and temporary flooded areas on the forest floor which are crucial breeding/birthing sites. The expansion of urban areas threatens the suitable habitats that still remain.
           %p Where natural habitats do still exist, they are often fragmented or degraded. Fragmentation occurs when healthy areas of habitat are isolated from one another. These fragmented areas are known as habitat islands. Salamander populations are affected since gene flow between the populations is prevented. This increases the occurrence of inbreeding, which results in a decrease in genetic variability. Fragmented populations where inbreeding occurs often ends in a genetic bottleneck this is an evolutionary event where a significant percentage of the populartion or species is killed otherwise prevented from reproducing.
-#biodiversity.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "biodiversity", :role => "dialog", :tabindex => "-1"}
+#biodiversity-icon.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "biodiversity", :role => "dialog", :tabindex => "-1"}
   .modal-dialog
     .modal-content
       .modal-header
@@ -39,7 +39,7 @@
           %p A further 62 species have been designated as Near-Threatened with populations that are dwindling. This means they are quickly getting closer to Threatened Status and to the brink of extinction.
           %p Sadly for some salamanders it is already too late, as both the Yunnan Lake Newt (Cynops wolterstorffi) and Ainsworth's Salamander (Plethodon ainsworthi) have already gone extinct; completely exterminated by the callous hands of humans.
           %p Salamanders have been on the earth for over 160 million years, and the terrible state that they now find themselves in is due to the detrimental acts of humans.  Even those species that are not experiencing population declines deserve attention and conservation to ensure that they remain healthy and stable.
-#invaisive.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "invaisive", :role => "dialog", :tabindex => "-1"}
+#invasive-icon.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "invasive-icon", :role => "dialog", :tabindex => "-1"}
   .modal-dialog
     .modal-content
       .modal-header
