--- a/source/projects/salamander-watch/index.html.haml
+++ b/source/projects/salamander-watch/index.html.haml
@@ -23,16 +23,16 @@
     .col-lg-12.col-md-12.col-sm-12
       %h3 Environmental issues affecting the spotted salamander
     .col-lg-3.col-md-3.col-sm-3
-      %a.thumbnail{"data-target" => "#climateChange", "data-toggle" => "modal", :href => "#"}
+      %a.thumbnail{"data-target" => "#climate-change-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Climate Change Icon", :src => "/images/climatechange-icon.png"}/
     .col-lg-3.col-md-3.col-sm-3
-      %a.thumbnail{"data-target" => "#habitat-loss", "data-toggle" => "modal", :href => "#"}
+      %a.thumbnail{"data-target" => "#habitat-loss-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Habitat Loss Icon", :src => "/images/habitatloss-icon.png"}/
     .col-lg-3.col-md-3.col-sm-3
-      %a.thumbnail{"data-target" => "#biodiversity", "data-toggle" => "modal", :href => "#"}
+      %a.thumbnail{"data-target" => "#biodiversity-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Biodiversity Icon", :src => "/images/biodiversity-icon.png"}/
     .col-lg-3.col-md-3.col-sm-3
-      %a.thumbnail{"data-target" => "#invaisive", "data-toggle" => "modal", :href => "#"}
+      %a.thumbnail{"data-target" => "#invasive-icon", "data-toggle" => "modal", :href => "#"}
         %img.small-thumb{:alt => "Invasive Species Icon", :src => "/images/invasivespecies-icon.png"}/
 
   .row
