Photo of Tam Vu added

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -76,7 +76,7 @@
 		.row
 			.col-md-2
 				.thumbnail
-					%img{:src => "#", :alt => "Profile shot of Tam Vu", :class => 'img-circle img-responsive'}
+					%img{:src => "/images/people/tam-profile.png", :alt => "Profile shot of Tam Vu", :class => 'img-circle img-responsive'}
 			.col-md-10
 				%h4 Tam Vu
 				%p Dr. Tam Vu is an Assistant Professor of Computer Science at the University of Colorado, Denver where his teaching and research focus on the design and use of networked mobile technology.
