added links to about page

--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -87,10 +87,10 @@
 				%ul.list-unstyled
 					%h4
 						%li
-							%a{:href => ""} Hitchcock Center for the Environment
+							%a{:href => "http://www.hitchcockcenter.org/"} Hitchcock Center for the Environment
 					%li
 						%h4
-							%a{:href => ""}Dr. Susannah Lerman,
+							%a{:href => "https://sites.google.com/site/susannahlerman/"}Dr. Susannah Lerman,
 							%span UMass Amherst/Neighbourhood Nestwatch Project
 
 
