background and text color to modal headers

--- a/source/layouts/modals/modals-environmental-issues.html.haml
+++ b/source/layouts/modals/modals-environmental-issues.html.haml
@@ -3,7 +3,7 @@
 		.modal-content
 			.modal-header
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-				%h4#what-is-pvcs-title.modal-title Climate Change
+				%h4#climate-change-title.modal-title Climate Change
 			.modal-body.row
 				.col-md-4
 					.thumbnail
@@ -16,7 +16,7 @@
 		.modal-content
 			.modal-header
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-				%h4#what-is-pvcs-title.modal-title Climate Change
+				%h4#invasive-title.modal-title Climate Change
 			.modal-body.row
 				.col-md-4
 					.thumbnail
@@ -29,7 +29,7 @@
 		.modal-content
 			.modal-header
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-				%h4#what-is-pvcs-title.modal-title Science 2.0
+				%h4#science-two-zero-title.modal-title Science 2.0
 			.modal-body.row
 				.col-md-4
 					.thumbnail
@@ -42,7 +42,7 @@
 		.modal-content
 			.modal-header
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-				%h4#what-is-pvcs-title.modal-title Habitat Loss
+				%h4#habitat-loss-title.modal-title Habitat Loss
 			.modal-body.row
 				.col-md-4
 					.thumbnail
@@ -55,7 +55,7 @@
 		.modal-content
 			.modal-header
 				%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-				%h4#what-is-pvcs-title.modal-title Biodiversity
+				%h4#biodiversity-title.modal-title Biodiversity
 			.modal-body.row
 				.col-md-4
 					.thumbnail
