--- a/source/layouts/modals/modals-salamander.html.haml
+++ b/source/layouts/modals/modals-salamander.html.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-        %h4#climateChange-title.modal-title Spotted Salamanders and Climate Change
+        %h4#climate-change-title.modal-title Spotted Salamanders and Climate Change
       .modal-body.row
         .col-md-4
           %img.img-rounded.img-responsive{:alt => "Climate changes affecting salamanders", :src => "/images/climate-modal.png"}/
