--- a/source/layouts/shared/nav.html.haml
+++ b/source/layouts/shared/nav.html.haml
@@ -16,9 +16,9 @@
           %li
             %a{:href => "/"} Home
           %li
-            %a{:href => "/about"} About PVCS
+            %a{:href => "/about/"} About PVCS
           %li
-            %a{:href => "/projects"} Projects
+            %a{:href => "/projects/"} Projects
           %li
             %a{:href => "#"} Sign Up/Log In
         %form.navbar-form
