--- a/source/about/index.html.haml
+++ b/source/about/index.html.haml
@@ -81,6 +81,13 @@
 				%h4 Tam Vu
 				%p Dr. Tam Vu is an Assistant Professor of Computer Science at the University of Colorado, Denver where his teaching and research focus on the design and use of networked mobile technology.
 		.row
+			.col-md-2
+				.thumbnail
+					%img{:src => "/images/people/phuc-nguyen.jpg", :alt => "Profile shot of Phuc Nguyen", :class => 'img-circle img-responsive'}/
+			.col-md-10
+				%h4 Phuc Nguyen
+				%p Phuc Nguyen is a Ph.D. student in the Department of Computer Science, University of Colorado, Denver. His research interests include wired/wireless networking and mobile computing.
+		.row
 			.col-md-12
 				%h3 Our Partners
 			.col-md-12
